@@ -1,9 +1,8 @@
 package ua.foxminded.university.service.impl;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
-import ua.foxminded.university.Registration;
+import ua.foxminded.university.dto.Registration;
 import ua.foxminded.university.model.Role;
 import ua.foxminded.university.model.UserEntity;
 import ua.foxminded.university.repository.RoleRepository;
@@ -11,17 +10,15 @@ import ua.foxminded.university.repository.UserRepository;
 import ua.foxminded.university.service.UserService;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 @Service
 public class UserServiceImpl implements UserService {
-
     private final UserRepository userRepository;
     private final RoleRepository roleRepository;
-    private List<UserEntity> users;
+    private final List<UserEntity> users;
     private final PasswordEncoder passwordEncoder;
-    @Autowired
+
     public UserServiceImpl(UserRepository userRepository, RoleRepository roleRepository, PasswordEncoder passwordEncoder) {
         this.userRepository = userRepository;
         this.roleRepository = roleRepository;
@@ -34,10 +31,9 @@ public class UserServiceImpl implements UserService {
         UserEntity user = new UserEntity();
         user.setUserName(registration.getUserName());
         user.setEmail(registration.getEmail());
-//        user.setPassword(registration.getPassword());
         user.setPassword((passwordEncoder.encode(registration.getPassword())));
         Role role = roleRepository.findByName("USER");
-        user.setRoles(Arrays.asList(role));
+        user.setRoles(List.of(role));
         userRepository.save(user);
     }
 
